// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AiInfoButton > renders the button with tooltip 1`] = `
<button
  aria-describedby="_r_0_"
  aria-expanded="true"
  aria-label="Info button"
  class="ds:cursor-pointer"
  data-testid="aiinfo"
  type="button"
>
  <svg
    aria-label="Info button"
    class="ds:text-secondary-gray ds:mb-2"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs>
      <radialgradient
        cx="-247.455"
        cy="462.916"
        fx="-247.455"
        fy="462.916"
        gradientTransform="matrix(0 10 10 0 -4617.162 2486.548)"
        gradientUnits="userSpaceOnUse"
        id="_r_2_"
        r="1"
      >
        <stop
          offset="0"
          stop-color="#7275b7"
        />
        <stop
          offset="1"
          stop-color="#494a99"
        />
      </radialgradient>
    </defs>
    <g>
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 13.26-1.63 4.41-1.63-4.41-4.41-1.63L8.74 12l1.63-4.41L12 12l4.41 1.63L12 15.26Zm4.53-5.87L15.57 12l-.96-2.61L12 8.43l2.61-.96.96-2.61.96 2.61 2.61.96-2.61.96Z"
        fill="url(#_r_2_)"
      />
    </g>
  </svg>
</button>
`;

exports[`AiInfoButton > renders the icon only 1`] = `
<svg
  class="ds:text-secondary-gray"
  fill="currentColor"
  height="24"
  stroke="currentColor"
  stroke-width="0"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <radialgradient
      cx="-247.455"
      cy="462.916"
      fx="-247.455"
      fy="462.916"
      gradientTransform="matrix(0 10 10 0 -4617.162 2486.548)"
      gradientUnits="userSpaceOnUse"
      id="_r_5_"
      r="1"
    >
      <stop
        offset="0"
        stop-color="#7275b7"
      />
      <stop
        offset="1"
        stop-color="#494a99"
      />
    </radialgradient>
  </defs>
  <g>
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 13.26-1.63 4.41-1.63-4.41-4.41-1.63L8.74 12l1.63-4.41L12 12l4.41 1.63L12 15.26Zm4.53-5.87L15.57 12l-.96-2.61L12 8.43l2.61-.96.96-2.61.96 2.61 2.61.96-2.61.96Z"
      fill="url(#_r_5_)"
    />
  </g>
</svg>
`;
